--- a/Curriculum.html
+++ b/Curriculum.html
@@ -41,6 +41,9 @@
 			<li>
 				Curso de informática completo.
 			</li><br>
+			< li >
+				Conhecimentos em Excel.
+			</ Li > < br >
 			<li>
 				Curso de arduino básico
 			</li><br>
